# tmc-scoreboards

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  cabal.project  data.js  hie.yaml  index.html  package-lock.json  package.json  script.js  stack.yaml  style.css  tsconfig.json
client/: client.cabal
data/: endtech.csv  endtech.js  global.js  hekate.js  hypnos.js  ingenium.js  litetech.csv  litetech.js  lunaar.csv  melontech.js  scoreboards.json  wavetech.csv  wavetech.js
src/: index.html  setup.js  style.scss
src/client/: index.html
src/client/components/: app.tsx  objective-bar.tsx  scoreboard.tsx  search-bar.tsx  server-bar.tsx
src/client/components/styles/: app.scss  colors.scss  scoreboard.scss  server-bar.scss
src/client/typings/: api.d.ts  objectives.ts
src/components/: app.tsx  scoreboard.tsx  search-bar.tsx
src/components/styles/: app.scss  colors.scss  scoreboard.scss  search-bar.scss
src/scoreboards/: scoreboards.cabal
src/scoreboards/Data/: Scoreboards.hs  endtech.csv
src/server/: Main.hs  server.cabal
