cabal-version:       >=1.10

name:                front
version:             0.1.0.0
homepage:            https://github.com/samipourquoi/tmc-scoreboards
license:             MIT
author:              samipourquoi
maintainer:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable front
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
