cabal-version:  >= 1.2
name:           scoreboards
version:        0.1.0.0
homepage:       https://github.com/samipourquoi/tmc-scoreboards#readme
bug-reports:    https://github.com/samipourquoi/tmc-scoreboards/issues
author:         samipourquoi
maintainer:     samipourquoi
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/samipourquoi/tmc-scoreboards

library
  exposed-modules:  Data.Scoreboards
  -- hs-source-dirs:   Data
  build-depends:    
    base,
    csv,
    containers,
    filepath
  default-language: Haskell2010
