cabal-version:  >= 1.2
name:           server
version:        0.1.0.0
homepage:       https://github.com/samipourquoi/tmc-scoreboards#readme
bug-reports:    https://github.com/samipourquoi/tmc-scoreboards/issues
author:         samipourquoi
maintainer:     samipourquoi
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/samipourquoi/tmc-scoreboards

executable server
  main-is:          Main.hs
  build-depends:
    base,
    scotty >= 0.12,
    wai-middleware-static,
    text,
    scoreboards,
    aeson
  default-language: Haskell2010
